<?xml version="1.0"?>
<package format="2">
  <name>ftm_msgs</name>
  <version>1.0.0</version>
  <description>
	<p>The ftm_msgs package provides a recommended interface to be used when developing FTM application in ROS.</p>
	<p> The recommended interface consists of three main blocks:
	<br />
	1. FTMSensor - a node that performs periodic FTM measurements for a given list of FTM Responders.
	<br />
	2. LCIActionServer - An action server node that implements the following:
	<br />
		- Performs an on-demand LCI requests for a given list of FTM responders
		<br />
		- Exposes Action to perform LCI request for a list of responders
		<br />
		- Can be configured to publish LCI measurements results to a topic. If so, publishes results to ftm/lci topic
	<br />
	3. LCIRegistry -  An optional node implementing the following:
	<br />
		- Stores FTM Responders data
		<br />
		- Subscribes to ftm/lci topic in order to update its data structure
		<br />
		- Exposes CRUD services
		<br />
	</p>
	<p>ftm_msgs package provides the definitions of the Messages, Services and Actions needed in order to implement the architecture described above.</p>
  </description>

  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="repository">http://wiki.ros.org/ftm_msgs</url>
  <url type="website">http://wiki.ros.org/ftm_msgs</url>

  <author email="gilakiva@mail.tau.ac.il">Gil Akiva</author>
  <author email="guykhazma@mail.tau.ac.il">Guy Khazma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
